Fix horizontal scroll.

--- a/static/css/modules/grid.less
+++ b/static/css/modules/grid.less
@@ -5,7 +5,7 @@
 .container {
     margin: 0 auto;
     padding: 20px;
-    width: @site-width;
+    width: 100%;
 }
 
 .grid {
